--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
   <head>
     <meta charset="utf-8">
@@ -38,7 +38,7 @@
       <hr/>
         <div class="about-me"> <!--about me-->
          <h3>About Tatyana</h3>
-          <p>Four years ago, I changed my life completely, moved to United States, a half a world away from my family. I found myself in healthcare field and loving it. At the same time, I was impressed how technologies changing the way we are taking care of people. And I want to be part of it. I am beyond happy to be a student at Thinkful, and I believe that I can pursue my goals with their help.
+           <p> A couple of years ago I found myself in healthcare field, love it and learned a lot. My job helped me to realize how technologies are evolving our ways to take care of people. That is how I found my second passion - Web Developing. It is very interesting and rapidly changing area I beleive can help me to bring my ideas to life and help others. And become a student at Thinkful is my first step to meet this goal.
           </p>
 
       <hr/>
