--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
 
   <body>
-  <header> <!--header-->
-  <header class ="dark-background">
-    <h1>Tatyana D. Radnaeva</h1>
-    <p>Software developer</p>
-    </header>
+   <header> <!--header-->
+    <header class ="dark-background">
+     <h1>Tatyana D. Radnaeva</h1>
+      <p>Software developer</p>
+   </header>
 
   <!--main and image-->
   <main>
@@ -31,7 +31,7 @@
             <li>software development</li>
             <li>healthcare</li>
             <li>health insurance</li>
-            <li>traveling</>
+            <li>traveling</li>
           </ul>
           </p>
         </div>
@@ -43,12 +43,12 @@
 
       <hr/>
 
-         <div class="conatct"> <!--contact links-->
+         <div class="contact"> <!--contact links-->
           <h3>Contact Tatyana</h3>
           <p>I love meeting new people. Feel free to contact me: </p>
           <ol>
             <li> 
-              <a href=="https://www.linkedin.com/in/tatyana-d-radnaeva-6937568b/">LinkedIn</a>
+              <a href="https://www.linkedin.com/in/tatyana-d-radnaeva-6937568b/">LinkedIn</a>
             </li>
             <li>
               <a href="https://github.com/TatyanaRadnaeva">Github</a>
@@ -59,10 +59,10 @@
       </article>
   </main>
 <footer> <!--footer-->
-<footer class="dark-background">
-<div class="footer-container">
-<p>&copy; Tatyana D Radnaeva </p>
-</div>
+ <footer class="dark-background">
+  <div class="footer-container">
+   <p>&copy; Tatyana D Radnaeva </p>
+  </div>
 </footer>
 
     <script src="script.js"></script>
