--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <a href="https://www.linkedin.com/in/tatyana-d-radnaeva-6937568b/">LinkedIn</a>
             </li>
             <li>
-              <a href="https://github.com/TatyanaRadnaeva">Github</a>
+              <a href="https://github.com/TatyanaRadnaeva">GitHub</a>
             </li>
           </ol> 
 
