--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <html lang = "en">
     <meta charset="utf-8">
     <meta name="description" content="portfolio">
     <title>Tatyana D Radnaeva</title>
@@ -16,9 +17,9 @@
 
   <!--main and image-->
   <main>
-  <main class ="light-background">
+   <main class ="light-background">
     <div class ="my-image">
-      <a href="https://lh3.googleusercontent.com/UBZ4dYPlqQ4Ii6jcswLKzxTcdfxf8wKDHyygFRjdLWx2eLNcc9uNayAz1hHDJeG_ndwYYQPXfArdYoYzUZkHNOjSgmguYojT101CWKv4RKCVd3IqjxEwnAM-YRx8VLYeWgqPq-86O-A=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/UBZ4dYPlqQ4Ii6jcswLKzxTcdfxf8wKDHyygFRjdLWx2eLNcc9uNayAz1hHDJeG_ndwYYQPXfArdYoYzUZkHNOjSgmguYojT101CWKv4RKCVd3IqjxEwnAM-YRx8VLYeWgqPq-86O-A=w400-h315-p-k" /> </a>
+      <a href="https://lh3.googleusercontent.com/UBZ4dYPlqQ4Ii6jcswLKzxTcdfxf8wKDHyygFRjdLWx2eLNcc9uNayAz1hHDJeG_ndwYYQPXfArdYoYzUZkHNOjSgmguYojT101CWKv4RKCVd3IqjxEwnAM-YRx8VLYeWgqPq-86O-A=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/UBZ4dYPlqQ4Ii6jcswLKzxTcdfxf8wKDHyygFRjdLWx2eLNcc9uNayAz1hHDJeG_ndwYYQPXfArdYoYzUZkHNOjSgmguYojT101CWKv4RKCVd3IqjxEwnAM-YRx8VLYeWgqPq-86O-A=w400-h315-p-k" /> my-image </a>
     </div>
 
       <!--introduction,about me, contact-->
@@ -27,12 +28,12 @@
           <h2>Hi! My name is Tatyana</h2>
           <p>I am front-line worker and software developer living in Pittsburgh, Pennsylvania</p>
           <p>I am interested in:
-          <ul>
+            <ul>
             <li>software development</li>
             <li>healthcare</li>
             <li>health insurance</li>
             <li>traveling</li>
-          </ul>
+            </ul>
           </p>
         </div>
       <hr/>
@@ -55,9 +56,10 @@
             </li>
           </ol> 
 
-    </div>
+        </div>
       </article>
-  </main>
+  </main> 
+    
 <footer> <!--footer-->
  <footer class="dark-background">
   <div class="footer-container">
