--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <hr/>
         <div class="about-me"> <!--about me-->
          <h3>About Tatyana</h3>
-           <p> A couple of years ago I found myself in healthcare field, love it and learned a lot. My job helped me to realize how technologies are evolving our ways to take care of people. That is how I found my second passion - Web Developing. It is very interesting and rapidly changing area I beleive can help me to bring my ideas to life and help others. And become a student at Thinkful is my first step to meet this goal.
+           <p> A couple of years ago I found myself in healthcare field, love it and learned a lot. My job helped me to realize how technologies are evolving our ways to take care of people. That is how I found my second passion - Web Developing. It is very interesting and rapidly changing area I beleive can help me to bring my ideas to life and help others. And become a student at Thinkful is my first step to meet this goal. I am so excited to meet other developers and become a part of such an interesting community.
           </p>
 
       <hr/>
