--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE HTML>
-<html>
-  <head>
-    <html lang = "en">
+<html lang = "en"> 
+<head>
     <meta charset="utf-8">
     <meta name="description" content="portfolio">
     <title>Tatyana D Radnaeva</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
+ </head>
 
-  <body>
-   <header> <!--header-->
-    <header class ="dark-background">
-     <h1>Tatyana D. Radnaeva</h1>
+ <body>
+   <!--header-->    
+   <header class ="dark-background">      
+      <h1>Tatyana D. Radnaeva</h1>
       <p>Software developer</p>
    </header>
 
   <!--main and image-->
-  <main>
+  
    <main class ="light-background">
     <div class ="my-image">
-      <a href="https://lh3.googleusercontent.com/UBZ4dYPlqQ4Ii6jcswLKzxTcdfxf8wKDHyygFRjdLWx2eLNcc9uNayAz1hHDJeG_ndwYYQPXfArdYoYzUZkHNOjSgmguYojT101CWKv4RKCVd3IqjxEwnAM-YRx8VLYeWgqPq-86O-A=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/UBZ4dYPlqQ4Ii6jcswLKzxTcdfxf8wKDHyygFRjdLWx2eLNcc9uNayAz1hHDJeG_ndwYYQPXfArdYoYzUZkHNOjSgmguYojT101CWKv4RKCVd3IqjxEwnAM-YRx8VLYeWgqPq-86O-A=w400-h315-p-k" /></a>
+      <a href="https://lh3.googleusercontent.com/UBZ4dYPlqQ4Ii6jcswLKzxTcdfxf8wKDHyygFRjdLWx2eLNcc9uNayAz1hHDJeG_ndwYYQPXfArdYoYzUZkHNOjSgmguYojT101CWKv4RKCVd3IqjxEwnAM-YRx8VLYeWgqPq-86O-A=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/UBZ4dYPlqQ4Ii6jcswLKzxTcdfxf8wKDHyygFRjdLWx2eLNcc9uNayAz1hHDJeG_ndwYYQPXfArdYoYzUZkHNOjSgmguYojT101CWKv4RKCVd3IqjxEwnAM-YRx8VLYeWgqPq-86O-A=w400-h315-p-k" alt ="Tatyana D. Radnaeva"/></a>
     </div>
 
       <!--introduction,about me, contact-->
@@ -27,20 +26,20 @@
         <div class="introduction">
           <h2>Hi! My name is Tatyana</h2>
           <p>I am front-line worker and software developer living in Pittsburgh, Pennsylvania</p>
-          <p>I am interested in:
+          <p>I am interested in:</p>
             <ul>
             <li>software development</li>
             <li>healthcare</li>
             <li>health insurance</li>
             <li>traveling</li>
             </ul>
-          </p>
         </div>
       <hr/>
         <div class="about-me"> <!--about me-->
          <h3>About Tatyana</h3>
-           <p> A couple of years ago I found myself in healthcare field, love it and learned a lot. My job helped me to realize how technologies are evolving our ways to take care of people. That is how I found my second passion - Web Developing. It is very interesting and rapidly changing area I beleive can help me to bring my ideas to life and help others. And become a student at Thinkful is my first step to meet this goal. I am so excited to meet other developers and become a part of such an interesting community.
+           <p> A couple of years ago I found myself in healthcare field, love it and learned a lot. My job helped me to realize how technologies are evolving our ways to take care of people. That is how I found my second passion - Web Developing. It is very interesting and rapidly changing area I believe can help me to bring my ideas to life and help others. Can you imagine how cool it is to help people overcome their strugle or make their lives easier with something that you have created? And become a student at Thinkful is my first step to meet this goal. I am so excited to meet other developers and become a part of such an interesting community.
           </p>
+        </div>
 
       <hr/>
 
@@ -60,7 +59,7 @@
       </article>
   </main> 
     
-<footer> <!--footer-->
+<!--footer-->
  <footer class="dark-background">
   <div class="footer-container">
    <p>&copy; Tatyana D Radnaeva </p>
