--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
           <p>I am interested in:</p>
             <ul>
             <li>software development</li>
-            <li>healthcare</li>
+            <li>EHR software</li>
+            <li>e-health</li>
             <li>health insurance</li>
             <li>traveling</li>
             </ul>
